# mprpc

mprpc/example/: friend.pb.h  user.pb.h
mprpc/example/callee/: CMakeLists.txt  userservice.cc
mprpc/src/: CMakeLists.txt  mprpcapplication.cc  mprpcconfig.cc
mprpc/src/include/: mprpcapplication.h  mprpcconfig.h  rpcheader.pb.h
mprpc/test/protobuf/: CMakeLists.txt  a.out  main.cc  test.pb.h  test.proto
